--- a/Integrated Presenter/PIPControl.xaml
+++ b/Integrated Presenter/PIPControl.xaml
@@ -70,7 +70,7 @@
 
             <TextBlock Margin="0,0,10,0" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource GrayText}">[NumPad 1-9] SNAP TO POSITION</TextBlock>
             <TextBlock Margin="0,0,10,0" HorizontalAlignment="Center" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource GrayText}">[Ctrl+ 1-8] PIP FILL SOURCE</TextBlock>
-            <TextBlock Margin="0,0,10,0" HorizontalAlignment="Center" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource GrayText}">[1-8] PRESET NEXT PIP FILL SOURCE</TextBlock>
+            <TextBlock Margin="0,0,10,0" HorizontalAlignment="Center" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource GrayText}">[LShift + 1-8] PRESET NEXT PIP FILL SOURCE</TextBlock>
             <TextBlock Margin="0,0,10,0" HorizontalAlignment="Center" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Style="{StaticResource GrayText}">[1-8] PREVIEW BUS SOURCE / [Enter] AUTO TRANS</TextBlock>
             <StackPanel Margin="10,2,10,2" Orientation="Horizontal" Grid.Row="0" Grid.Column="4">
                 <Rectangle Name="ctrllight" Width="40" Fill="WhiteSmoke"></Rectangle>
