refactor lexer to keep original source line with token clicking on errors now jumps and highlights source line

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -182,7 +182,7 @@
                         <!--<TextBlock Name="tbConsole"></TextBlock>-->
                         <!--<FlowDocument Name="error_report"></FlowDocument>-->
                         <!--<StackPanel Name="error_report" Orientation="Vertical"></StackPanel>-->
-                        <ListView Grid.Row="1" Name="error_report_view">
+                        <ListView Grid.Row="1" Name="error_report_view" SelectionChanged="error_report_view_SelectionChanged" PreviewMouseDown="error_report_view_PreviewMouseDown">
                             <ListView.Resources>
                                 <Style TargetType="{x:Type ListViewItem}">
                                     <Style.Triggers>
