--- a/MediaEngine/MainWindow.xaml
+++ b/MediaEngine/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MediaEngine" xmlns:playout="clr-namespace:MediaEngine.Playout" xmlns:ffme="clr-namespace:Unosquare.FFME;assembly=ffme.win" xmlns:wpfplayout="clr-namespace:MediaEngine.WPFPlayout"
+        xmlns:local="clr-namespace:MediaEngine"
+        xmlns:wpfplayout="clr-namespace:MediaEngine.WPFPlayout"
         mc:Ignorable="d"
         PreviewKeyDown="Window_PreviewKeyDown"
         Title="MainWindow" Height="450" Width="800">
